# testjob-splitHtml

./: .gitignore  README.md  main.py  notes.md  output_fragments.txt  pyproject.toml
controllers/: splitter_html.py
data/: fragments.txt  source.html  source2.html
helpers/: generate_content.py
models/: html_fragment.py
repositories/: html_repository.py
services/: split_html.py
tests/: test_split_html.py  test_split_html2.py
