[tool.poetry]
name = "html-splitter-project"
version = "0.1.0"
description = "Split HTML files into multiple files"
authors = ["Maxat Oralbayev <code.datum@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/code-datum/html-splitter-project"
homepage = "https://github.com/code-datum/html-splitter-project"
keywords = ["html", "splitter", "split", "html-splitter", "html-split"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
split-html = "main:main"